--- a/style.css
+++ b/style.css
@@ -1,27 +1,75 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+ul,li{
+    list-style: none;
+}
+
+.icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+ }
+
 canvas{
-    background: pink;
+    background: white;
     display: block;
 }
 
 body{
     margin: 0;
+    overflow: hidden;
 }
 
 .actions{
     position: fixed;
     left: 0;
-    bottom: 0;
+    top: 0;
+    padding: 20px;
 }
 
-.actions > #brush{
-    display: none;
+.actions svg{
+    width: 1.5em;
+    height: 1.5em;
+    transition: all 0.3s;
+    margin: 0 10px;
 }
 
-.actions.x >#brush{
-    display: inline-block;
-}
-.actions.x >#eraser{
-    display: none;
+.actions svg.active{  
+   fill: red;
+   transform: scale(1.2);
 }
 
+.colors{
+    position: fixed;
+    top: 80px;
+    left: 29px;}
 
+.colors >li{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+    margin: 10px 0;
+    transition: all 0.3s;
+}
+
+.colors >li.red{
+    background: red;
+}
+
+.colors >li.green{
+    background: green;
+}
+
+.colors >li.blue{
+    background: blue;
+}
+
+.colors >li.active{
+    box-shadow: 0 0 3px rgba(0, 0, 0, 1);
+    transform: scale(1.2);
+}
