--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ body{
     background: red;
 }
 
+.colors >li.black{
+    background: black;
+}
+
 .colors >li.green{
     background: green;
 }
@@ -70,6 +74,33 @@ body{
 }
 
 .colors >li.active{
+    box-shadow: 0 0 3px rgba(0, 0, 0, 1);
+    transform: scale(1.2);
+}
+
+.sizes{
+    position: fixed;
+    right: 10px;
+    top: 45px;
+}
+
+.sizes >li{
+    margin: 10px 0;
+}
+
+.sizes >li.thin{
+    height: 0;
+    width: 20px;
+    border-top: 3px solid black;
+}
+
+.sizes >li.thick{
+    height: 0;
+    width: 20px;
+    border-top: 6px solid black;
+}
+
+.sizes >li.active{
     box-shadow: 0 0 3px rgba(0, 0, 0, 1);
     transform: scale(1.2);
 }
